Make the navigation section 1em wider, in the hope of avoiding the wrapping you see on Opera and IceApe (or whatever that funny browser Anna uses is called).
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/genedb-ng/trunk@7979 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/genedb-web/WebContent/includes/style/wtsi.css
+++ b/genedb-web/WebContent/includes/style/wtsi.css
@@ -228,7 +228,7 @@ div.section-body {
 }
 
 #navigation {
-    width: 14em;
+    width: 15em;
     float: right;
    	font-size: 10pt;
 	padding: 0px 5px 0px 5px;
